Fix RTL popup alignment for OOjs UI 0.19.5
Popup alignment corrections are now done with margins on the anchor,
not directly on the popup. Setting "left" also didn't have any effect,
because it was being overridden by inline styles set by the new
PopupWidget/FloatableElement code.

Bug: T159999

--- a/modules/styles/mw.echo.ui.NotificationBadgeWidget.less
+++ b/modules/styles/mw.echo.ui.NotificationBadgeWidget.less
@@ -10,9 +10,10 @@
 		// the parent em sizing by dividing.
 		font-size: 0.875em / 0.75em;
 
-		// Align the popup with the center of the button
-		/* @noflip */
-		left: 0.8em;
+		.oo-ui-popupWidget-anchor {
+			// Align the popup with the center of the button
+			margin-left: 0.8em;
+		}
 
 		> .oo-ui-popupWidget-popup {
 			> .oo-ui-popupWidget-head {
